Lab 7 - security - deletion
deletion available only to
'admin'